# VK2D

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  clocignore.txt  makefile  premake5.lua  readme.md
Examples/FlappyPong/: .gitignore  CMakeLists.txt  FlappyPong.project  ball.lua  controller.lua  main.scene  paddle.lua
Examples/FlappyPong/CMake/: CopyAndRenameDll.cmake  CopyAndRenameDll_booter.cmake
Examples/FlappyPong/Scripts/: BallComponent.cpp  BallComponent.h  PaddleComponent.cpp  PaddleComponent.h  main.cpp
Examples/FlappyPong/Source/: BallComponent.cpp  BallComponent.h  PaddleComponent.cpp  PaddleComponent.h  main.cpp
Source/Console/: CommandDefinition.h  Console.cpp  Console.h
Source/Core/: Allocator.cpp  Allocator.h  Deserializable.cpp  Deserializable.h  DlOpen.cpp  DlOpen.h  DllExport.h  DllManager.cpp  DllManager.h  EntityId.cpp  EntityId.h  EntityManager.cpp  EntityManager.h  EntityPtr.cpp  EntityPtr.h  FrameContext.cpp  FrameContext.h  GameModule.cpp  GameModule.h  GameModuleDllLoading.cpp  HashedString.h  Input.cpp  Input.h  Keycodes.cpp  Maybe.h  PhysicsWorld_Private.h  PhysicsWorld_Rigidbody.cpp  ProjectManager.cpp  ProjectManager.h  Queue.h  Reflect.cpp  Reflect.h  Resource.h  ResourceManager.cpp  ResourceManager.h  RigidbodyInstance.h  SceneManager.cpp  SceneManager.h  Semaphore.cpp  Semaphore.h  (+21 more)
Source/Core/Components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  MeshComponent.cpp  MeshComponent.h  ParticleEmitterComponent.cpp  ParticleEmitterComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PointLightComponent.cpp  PointLightComponent.h  SkeletalMeshComponent.cpp  SkeletalMeshComponent.h  SpriteComponent.cpp  SpriteComponent.h  SpritesheetComponent.cpp  SpritesheetComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h  UneditableComponent.cpp  UneditableComponent.h  cameracomponent.cpp  cameracomponent.h  component.cpp  component.h  physicscomponent.cpp  physicscomponent.h  spritecomponent.cpp  spritecomponent.h
Source/Core/Config/: Config.cpp  Config.h
Source/Core/Console/: Console.cpp  Console.h
Source/Core/Input/: Gamepad.cpp  Gamepad.h  Input.cpp  Input.h  Keybinding.cpp  Keybinding.h  Keycodes.cpp  Keycodes.h  Keycodes_Private.h
Source/Core/Logging/: LogAppender.cpp  LogAppender.h  LogMessage.h  Logger.cpp  Logger.h  LoggerFactory.cpp  LoggerFactory.h
Source/Core/Lua/: input_cfuncs.h  lua_cfuncs.cpp  lua_cfuncs.h  luacomponent.cpp  luacomponent.h  luaindex.h  luaindexable.cpp  luaindexable.h  luaserializable.cpp  luaserializable.h
Source/Core/Math/: mathtypes.cpp  mathtypes.h
Source/Core/Rendering/: AbstractRenderer.h  Accessor.cpp  Accessor.h  Buffer.cpp  Buffer.h  BufferAllocator.cpp  BufferAllocator.h  BufferPool.cpp  BufferPool.h  BufferSlice.h  BufferView.cpp  BufferView.h  CameraHandle.h  CameraInstance.h  CameraResources.h  DebugDrawSystem.cpp  DebugDrawSystem.h  Framebuffer.cpp  Framebuffer.h  GlslToSpirvShaderCompiler.cpp  GlslToSpirvShaderCompiler.h  Image.cpp  Image.h  LightInstance.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PreRenderCommands.cpp  PreRenderCommands.h  Program.cpp  Program.h  RenderCommand.h  RenderContext.h  RenderPrimitiveFactory.cpp  RenderPrimitiveFactory.h  RenderSystem.cpp  RenderSystem.h  RenderSystem_Camera.cpp  RenderSystem_Init.cpp  (+30 more)
Source/Core/Resources/: AssimpConverter.cpp  AssimpConverter.h  Image.cpp  Image.h  Material.cpp  Material.h  Project.cpp  Project.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  SkeletalMesh.cpp  SkeletalMesh.h  SkeletalMeshAnimation.h  SkeletalMeshLoader.h  SkeletalMeshLoaderAssimp.cpp  SkeletalMeshLoaderAssimp.h  SkeletalModel.cpp  SkeletalModel.h  StaticMesh.cpp  StaticMesh.h  StaticMeshLoader.h  StaticMeshLoaderObj.cpp  StaticMeshLoaderObj.h  Submesh.h  VertexWeight.h
Source/Core/Serialization/: Deserializer.h  JsonSerializer.cpp  JsonSerializer.h  SchemaValidator.cpp  SerializedObject.cpp  SerializedObject.h  SerializedObjectSchema.h  SerializedValue.h  SerializedValueType.h  Serializer.h
Source/Core/UI/: ArrayEditor.cpp  ArrayEditor.h  ArrayEditor_Private.h  ComponentCreator.cpp  ComponentCreator.h  EditProjectDialog.cpp  EditProjectDialog.h  EditProjectDialog_Private.h  EditorSystem.cpp  EditorSystem.h  Imgui_InputText.cpp  Imgui_InputText_Private.h  NewComponentTypeEditor.cpp  NewComponentTypeEditor.h  ProjectCreator.cpp  ProjectCreator.h  SerializedObjectEditor.cpp  SerializedObjectEditor.h  SerializedObjectEditorInstance.cpp  SerializedObjectEditorInstance.h  (+5 more)
Source/Jobs/: JobEngine.cpp  JobEngine.h
Source/Logging/: LogAppender.cpp  LogAppender.h  LogLevel.cpp  LogLevel.h  LogMessage.h  Logger.cpp  Logger.h  LoggerFactory.cpp  LoggerFactory.h
Source/RenderingBackend/: Renderer.h
Source/Serialization/: Deserializable.cpp  Deserializable.h  DeserializationContext.h  Deserializer.h  JsonSerializer.cpp  JsonSerializer.h  SchemaValidator.cpp  SchemaValidator.h  SerializedObject.cpp  SerializedObject.h  SerializedObjectSchema.h  SerializedValue.h  SerializedValueType.cpp  SerializedValueType.h  Serializer.h
Source/Templates/: DefaultTemplateRenderer.cpp  DefaultTemplateRenderer.h  TemplateRenderer.h
Source/Util/: DefaultFileSlurper.cpp  DefaultFileSlurper.h  DlOpen.cpp  DlOpen.h  HashedString.h  Lerp.cpp  Lerp.h  Line.h  Queue.h  RandomFloat.cpp  RandomFloat.h  Semaphore.cpp  Semaphore.h  SetThreadName.cpp  Strings.cpp  Strings.h  WatchFile.cpp  WriteToFile.cpp  WriteToFile.h
Templates/NewComponent/: Component.cpp.tpl  Component.h.tpl
Templates/NewProject/: .gitignore  CMakeLists.txt.tpl  main.scene.tpl
shaders/: Lights.glsl  Normals.h  Particles.glsl  Specialization.glsl  Specialization.h  ambientOcclusion.frag  ambientOcclusionBlur.frag  debug_draw.frag  debug_draw.vert  mesh.frag  mesh.vert  mesh_skeletal.vert  mesh_transparent.frag  particles.frag  particles.vert  passthrough-transform.frag  passthrough-transform.vert  passthrough.frag  passthrough.vert  prepass.frag  prepass.vert  prepass_skeletal.vert  tonemap.frag  ui.frag  ui.vert
(+121 files in other folders)
